// PocketPlates relational database schema
// Paste this file into https://dbdiagram.io to visualize the database.
// Designed for Supabase Postgres, Row Level Security, and future migrations.

Enum meal_type {
  breakfast
  lunch
  dinner
  snack
  flexible
}

Enum recipe_visibility {
  private
  shared
  public
}

Enum cost_rating {
  very_cheap
  cheap
  moderate
  splurge
}

Enum difficulty_level {
  easy
  medium
  hard
  beginner_friendly
}

Enum recipe_effort_label {
  quick
  make_ahead
  one_pot
  low_cleanup
}

Enum pantry_item_status {
  active
  archived
}

Enum grocery_list_source_type {
  manual
  recipes
  meal_plan
}

Table profiles {
  id uuid [pk, note: 'Matches auth.users.id']
  username text [unique, note: 'Nullable; normalized lowercase 3–24 character handle using a-z, 0-9, or underscore; reserved names rejected']
  display_name text [note: 'Nullable; normalized app value is 1–50 characters and control characters are rejected']
  avatar_url text
  bio text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    `lower(username)` [name: 'profiles_username_lower_unique_idx', unique, note: 'Partial where username is not null']
  }
}

Table recipes {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  title text [not null]
  slug text
  summary text
  notes text
  servings int [not null, default: 1]
  prep_minutes int
  cook_minutes int
  cost_rating cost_rating
  difficulty difficulty_level
  estimated_total_cost numeric
  visibility recipe_visibility [not null, default: 'private']
  image_url text
  image_storage_path text
  source_name text
  source_url text
  is_favorite boolean [not null, default: false]
  published_at timestamptz
  archived_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, created_at)
    (owner_id, cost_rating)
    (owner_id, difficulty)
    (visibility, published_at)
    (owner_id, is_favorite)
    (owner_id, slug) [unique]
    (title) [name: 'recipes_title_trgm_idx', note: 'GIN pg_trgm index for case-insensitive contains search']
  }
}

Table recipe_meal_types {
  recipe_id uuid [not null, ref: > recipes.id]
  meal_type meal_type [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, meal_type) [pk]
    (meal_type)
  }
}

Table recipe_effort_labels {
  recipe_id uuid [not null, ref: > recipes.id]
  effort_label recipe_effort_label [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, effort_label) [pk]
    (effort_label, recipe_id) [name: 'recipe_effort_labels_effort_label_idx']
  }
}

Table recipe_links {
  id uuid [pk, default: `gen_random_uuid()`]
  recipe_id uuid [not null, ref: > recipes.id]
  label text
  url text [not null]
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
}

Table recipe_ingredients {
  id uuid [pk, default: `gen_random_uuid()`]
  recipe_id uuid [not null, ref: > recipes.id]
  name text [not null]
  amount numeric
  unit text
  notes text
  group_name text
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, sort_order)
    (name)
    (name) [name: 'recipe_ingredients_name_trgm_idx', note: 'GIN pg_trgm index for case-insensitive contains search']
  }
}

Table recipe_steps {
  id uuid [pk, default: `gen_random_uuid()`]
  recipe_id uuid [not null, ref: > recipes.id]
  instruction text [not null]
  timer_minutes int
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, sort_order)
  }
}

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  label text [not null]
  color text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, label) [unique]
  }
}

Table recipe_tags {
  recipe_id uuid [not null, ref: > recipes.id]
  tag_id uuid [not null, ref: > tags.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, tag_id) [pk]
    (tag_id)
  }
}

Table equipment {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  label text [not null]
  preset_key text [note: 'Nullable controlled key: microwave, rice_cooker, stovetop, oven, blender, or no_oven']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, label) [unique]
    (owner_id, preset_key) [unique]
  }
}

Table recipe_equipment {
  recipe_id uuid [not null, ref: > recipes.id]
  equipment_id uuid [not null, ref: > equipment.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (recipe_id, equipment_id) [pk]
    (equipment_id)
  }
}

Table pantry_items {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  name text [not null]
  default_unit text
  estimated_unit_cost numeric
  status pantry_item_status [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, name) [unique]
  }
}

Table meal_plans {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  week_start_date date [not null]
  title text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, week_start_date) [unique]
  }
}

Table meal_plan_entries {
  id uuid [pk, default: `gen_random_uuid()`]
  meal_plan_id uuid [not null, ref: > meal_plans.id]
  recipe_id uuid [not null, ref: > recipes.id]
  planned_for date [not null]
  meal_type meal_type [not null, default: 'flexible']
  servings int [not null, default: 1]
  notes text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (meal_plan_id, planned_for, meal_type, recipe_id) [unique]
    (recipe_id)
  }
}

Table grocery_lists {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > profiles.id]
  meal_plan_id uuid [ref: > meal_plans.id, note: 'ON DELETE SET NULL']
  title text [not null]
  source_type grocery_list_source_type [not null, default: 'manual']
  source_recipe_count int [not null, default: 0, note: 'Frozen selected-recipe source count']
  source_week_start_date date
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, source_week_start_date) [unique, name: 'grocery_lists_one_linked_meal_plan_week_idx', note: 'Partial: source_type = meal_plan and meal_plan_id is not null']
  }
}

Table grocery_list_items {
  id uuid [pk, default: `gen_random_uuid()`]
  grocery_list_id uuid [not null, ref: > grocery_lists.id]
  name text [not null]
  amount numeric
  unit text
  notes text
  normalized_name text [not null, note: 'Stored generated trim/collapse/lower comparison key']
  quantity_overridden boolean [not null, default: false]
  is_manual boolean [not null, default: true]
  checked boolean [not null, default: false]
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (grocery_list_id, normalized_name) [unique]
    (grocery_list_id, sort_order, id)
  }
}

Table grocery_list_item_sources {
  id uuid [pk, default: `gen_random_uuid()`]
  grocery_list_item_id uuid [not null, ref: > grocery_list_items.id]
  recipe_id uuid [ref: > recipes.id, note: 'ON DELETE SET NULL']
  recipe_ingredient_id uuid [ref: > recipe_ingredients.id, note: 'ON DELETE SET NULL']
  recipe_title text [not null]
  ingredient_name text [not null]
  ingredient_amount numeric
  ingredient_unit text
  ingredient_notes text
  saved_servings int [not null]
  target_servings int [not null]
  scale_factor numeric [not null]
  contributed_amount numeric
  canonical_unit text
  sort_order int [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (grocery_list_item_id, sort_order, id)
    (recipe_id)
  }
}
